# fidan

./: .clang-format  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  PROGRESS.md  README.md  vcpkg.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ai-analysis-toolchain-build.yaml  auto-assign.yaml  ci.yaml  llvm-toolchain-build.yaml  release-distribution.yaml  release-toolchain.yaml  toolchain-bundle-publish.yaml  validate-ai-analysis-toolchain.yaml  validate-llvm-toolchain.yaml
TEST/: test.fdn
TEST/scripts/: performance.sh
assets/github/: banner.txt
config/: llvm-toolchain-sources.json
config/innosetup/: installer.iss
crates/fidan-ai-analysis-helper/: Cargo.toml
crates/fidan-ai-analysis-helper/prompts/: explain_retry_user.txt  explain_system.txt  explain_user.txt  fix_retry_user.txt  fix_system.txt  fix_user.txt  improve_system.txt  improve_user.txt
crates/fidan-ai-analysis-helper/src/: config.rs  fidan_client.rs  main.rs  mcp.rs  provider.rs
crates/fidan-ai-analysis-helper/tests/: analyze_cli.rs  mcp_cli.rs
crates/fidan-ast/: Cargo.toml
crates/fidan-ast/src/: arena.rs  expr.rs  item.rs  lib.rs  module.rs  print.rs  stmt.rs  visitor.rs
crates/fidan-cli/: Cargo.toml
crates/fidan-cli/src/: ai_analysis.rs  distribution.rs  exec.rs  explain.rs  fix.rs  imports.rs  last_error.rs  main.rs  pipeline.rs  prompts.rs  repl.rs  replay.rs  self_cmd.rs  terminal.rs  toolchain.rs
crates/fidan-cli/src/dal/: api.rs  archive.rs  config.rs  mod.rs
crates/fidan-cli/tests/: extern_cli.rs  release_mega_cli.rs  trace_cli.rs
crates/fidan-codegen-cranelift/: Cargo.toml
crates/fidan-codegen-cranelift/src/: aot.rs  jit.rs  lib.rs
crates/fidan-codegen-llvm/: Cargo.toml
crates/fidan-codegen-llvm/src/: aot.rs  compile.rs  context.rs  inkwell_backend.rs  lib.rs  model.rs  tool.rs  validate.rs
crates/fidan-config/: Cargo.toml
crates/fidan-diagnostics/: Cargo.toml
crates/fidan-driver/: Cargo.toml
crates/fidan-driver/src/: ai_analysis.rs  dal.rs  frontend.rs  install.rs  install_windows.rs  lib.rs  llvm_helper.rs  options.rs  pipeline.rs  progress.rs  session.rs  terminal.rs
crates/fidan-driver/tests/: concurrent_e2e.rs  extern_e2e.rs
crates/fidan-embed/: Cargo.toml
crates/fidan-extern-fixture/: Cargo.toml
crates/fidan-fmt/: Cargo.toml
crates/fidan-fmt/src/: comments.rs  config.rs  emit_expr.rs  emit_item.rs  emit_stmt.rs  lib.rs  printer.rs
crates/fidan-hir/: Cargo.toml
crates/fidan-hir/src/: hir.rs  lib.rs  lower.rs
crates/fidan-interp/: Cargo.toml
crates/fidan-interp/src/: builtins.rs  env.rs  externs.rs  frame.rs  interp.rs  lib.rs  mir_interp.rs  profiler.rs
crates/fidan-interp/src/bootstrap/: dict_methods.rs  hashset_methods.rs  list_methods.rs  mod.rs  numeric_methods.rs  range_methods.rs  string_methods.rs
crates/fidan-interp/src/mir_interp/: api.rs
crates/fidan-interp/tests/: integration.rs
crates/fidan-lexer/: Cargo.toml
crates/fidan-lexer/src/: interner.rs  lexer.rs  lib.rs  synonyms.rs  token.rs
crates/fidan-llvm-helper/: Cargo.toml
crates/fidan-llvm-helper/src/: main.rs
crates/fidan-lsp/: Cargo.toml
crates/fidan-lsp/src/: analysis.rs  convert.rs  document.rs  lib.rs  semantic.rs  server.rs  store.rs  symbols.rs
crates/fidan-mir/: Cargo.toml
crates/fidan-mir/src/: analysis.rs  display.rs  lib.rs  lower.rs  mir.rs
crates/fidan-parser/: Cargo.toml
crates/fidan-passes/: Cargo.toml
crates/fidan-passes/src/: constant_folding.rs  copy_propagation.rs  dead_code.rs  escape_analysis.rs  inlining.rs  lib.rs  null_safety.rs  parallel_check.rs  precompile_hints.rs  unawaited_pending.rs  unreachable_pruning.rs
crates/fidan-runtime/: Cargo.toml
crates/fidan-runtime/src/: dict.rs  ffi.rs  hashset.rs  lib.rs  list.rs  object.rs  owned_ref.rs  parallel.rs  shared_ref.rs  string.rs  value.rs
crates/fidan-runtime/src/stdlib/: async_std.rs  collections.rs  common.rs  env.rs  io.rs  json.rs  math.rs  mod.rs  regex.rs  string.rs  test_runner.rs  time.rs
crates/fidan-secrets/: Cargo.toml
crates/fidan-source/: Cargo.toml
crates/fidan-stdlib/: Cargo.toml
crates/fidan-typeck/: Cargo.toml
crates/fidan-typeck/src/: check.rs  infer.rs  lib.rs  parallel_check.rs  scope.rs  types.rs
crates/libfidan/: Cargo.toml
crates/libfidan/examples/embed_c/: main.c
crates/libfidan/include/: fidan.h
crates/libfidan/src/: lib.rs
editors/vscode/: README.md  package-lock.json  package.json
fidan/builtins/: builtins.fdn  builtins_bindings.h  print.h
fidan/src/: bytecode_generator.cpp  errors.cpp  helpers.cpp  interpreter.cpp  main.cpp  parser.cpp  semantic_analyzer.cpp  tokenizer.cpp
roadmap/: ARCHITECTURE.md  PROGRESS.md
scripts/: bootstrap.ps1  bootstrap.sh  format_all.ps1  install-git-hooks.ps1  install-git-hooks.sh  merge-distribution-manifest.ps1  package-release-windows.ps1  package-release.ps1  package-toolchain.ps1  performance_bm.bat  performance_bm.sh  test.bat  translate-installer-langs.ps1  verify-release-windows.ps1
scripts/shared/: host-platform.ps1  windows-vc-redist.ps1
test/: syntax.fdn
test/cpp_benchmark/: benchmark.cpp  performance_suite.cpp
test/examples/: async_demo.fdn  check_val.fdn  comprehension.fdn  comprehensive.fdn  concurrency_showcase.fdn  dict_test.fdn  enum_test.fdn  globals_test.fdn  hoisting_showcase.fdn  import_test.fdn  inline_test.fdn  lambda_demo.fdn  multiline_strings.fdn  nested_action_modes.fdn  parallel_benchmark.fdn  parallel_demo.fdn  performance_suite.fdn  profiling_showcase.fdn  regex_test.fdn  release_mega_1_0.fdn  replay_demo.fdn  slice_smoke.fdn  spawn_method_test.fdn  stdlib_smoke.fdn  test.fdn  test_blocks.fdn  trace_demo.fdn  utils.fdn
test/golden/: comprehensive.fdn.expected  enum_test.fdn.expected  lambda_demo.fdn.expected  slice_smoke.fdn.expected  test.fdn.expected
test/import_test/: import_bundle.fdn  import_test.fdn  utils_alias.fdn  utils_flat.fdn
test/replays/: replay_demo_success.bundle
(+87 files in other folders)
