[workspace]
resolver = "2"
members = [
    "crates/fidan-source",
    "crates/fidan-lexer",
    "crates/fidan-ast",
    "crates/fidan-parser",
    "crates/fidan-diagnostics",
    "crates/fidan-typeck",
    "crates/fidan-hir",
    "crates/fidan-mir",
    "crates/fidan-passes",
    "crates/fidan-runtime",
    "crates/fidan-interp",
    "crates/fidan-codegen-cranelift",
    "crates/fidan-codegen-llvm",
    "crates/fidan-stdlib",
    "crates/fidan-driver",
    "crates/fidan-fmt",
    "crates/fidan-lsp",
    "crates/fidan-cli",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Fidan Contributors", "Kaan Gönüldinc <contact@appsolves.dev>"]
license-file = "LICENSE"
repository = "https://github.com/AppSolves/Fidan"

# ── Shared dependency versions ────────────────────────────────────────────────
[workspace.dependencies]
# Internal crates
fidan-source = { path = "crates/fidan-source" }
fidan-lexer = { path = "crates/fidan-lexer" }
fidan-ast = { path = "crates/fidan-ast" }
fidan-parser = { path = "crates/fidan-parser" }
fidan-diagnostics = { path = "crates/fidan-diagnostics" }
fidan-typeck = { path = "crates/fidan-typeck" }
fidan-hir = { path = "crates/fidan-hir" }
fidan-mir = { path = "crates/fidan-mir" }
fidan-passes = { path = "crates/fidan-passes" }
fidan-runtime = { path = "crates/fidan-runtime" }
fidan-interp = { path = "crates/fidan-interp" }
fidan-stdlib = { path = "crates/fidan-stdlib" }
fidan-driver = { path = "crates/fidan-driver" }
fidan-codegen-cranelift = { path = "crates/fidan-codegen-cranelift" }
fidan-fmt = { path = "crates/fidan-fmt" }
fidan-lsp = { path = "crates/fidan-lsp" }

# External
phf = { version = "0.13.1", features = ["macros"] }
phf_codegen = "0.13.1"
dashmap = "6"
typed-arena = "2"
ariadne = "0.6.0"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
rustc-hash = "2"
parking_lot = "0.12"
regex = "1"
indexmap = "2"
smol_str = "0.3.6"
strsim = "0.11"
rustyline = "17"
mimalloc = { version = "0.1", default-features = false }
tower-lsp = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde_json = "1"
notify = { version = "8", features = ["macos_fsevent"] }

# Cranelift JIT + AOT
cranelift-jit = "0.129.1"
cranelift-codegen = { version = "0.129.1", features = ["x86"] }
cranelift-frontend = "0.129.1"
cranelift-native = "0.129.1"
cranelift-module = "0.129.1"
cranelift-object = "0.129.1"

[profile.dev]
opt-level = 1 # faster builds in dev without being fully unoptimised

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
