[workspace]
resolver = "2"
members = [
  "crates/fidan-config",
  "crates/fidan-source",
  "crates/fidan-lexer",
  "crates/fidan-ast",
  "crates/fidan-parser",
  "crates/fidan-diagnostics",
  "crates/fidan-typeck",
  "crates/fidan-hir",
  "crates/fidan-mir",
  "crates/fidan-passes",
  "crates/fidan-runtime",
  "crates/fidan-interp",
  "crates/fidan-extern-fixture",
  "crates/libfidan",
  "crates/fidan-embed",
  "crates/fidan-codegen-cranelift",
  "crates/fidan-codegen-llvm",
  "crates/fidan-llvm-helper",
  "crates/fidan-stdlib",
  "crates/fidan-driver",
  "crates/fidan-fmt",
  "crates/fidan-lsp",
  "crates/fidan-cli",
]

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Fidan Contributors", "Kaan Gönüldinc <contact@appsolves.dev>"]
license-file = "LICENSE"
repository = "https://github.com/fidan-lang/fidan"

[workspace.dependencies]
fidan-config = { path = "crates/fidan-config" }
fidan-source = { path = "crates/fidan-source" }
fidan-lexer = { path = "crates/fidan-lexer" }
fidan-ast = { path = "crates/fidan-ast" }
fidan-parser = { path = "crates/fidan-parser" }
fidan-diagnostics = { path = "crates/fidan-diagnostics" }
fidan-typeck = { path = "crates/fidan-typeck" }
fidan-hir = { path = "crates/fidan-hir" }
fidan-mir = { path = "crates/fidan-mir" }
fidan-passes = { path = "crates/fidan-passes" }
fidan-runtime = { path = "crates/fidan-runtime" }
fidan-interp = { path = "crates/fidan-interp" }
libfidan = { path = "crates/libfidan" }
fidan-stdlib = { path = "crates/fidan-stdlib" }
fidan-driver = { path = "crates/fidan-driver" }
fidan-codegen-cranelift = { path = "crates/fidan-codegen-cranelift" }
fidan-codegen-llvm = { path = "crates/fidan-codegen-llvm" }
fidan-fmt = { path = "crates/fidan-fmt" }
fidan-lsp = { path = "crates/fidan-lsp" }

# External
phf = { version = "0.13.1", features = ["macros"] }
phf_codegen = "0.13.1"
dashmap = "6"
typed-arena = "2"
ariadne = "0.6.0"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
rustc-hash = "2"
parking_lot = "0.12"
regex = "1"
indexmap = "2"
smol_str = "0.3.6"
strsim = "0.11"
rustyline = "18"
unicode-width = "0.2"
mimalloc = { version = "0.1", default-features = false }
tower-lsp = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "1"
reqwest = { version = "0.13", default-features = false, features = [
  "blocking",
  "json",
  "multipart",
  "rustls",
] }
semver = "1"
flate2 = "1"
tar = "0.4"
urlencoding = "2"
keyring = { version = "3", features = [
  "apple-native",
  "windows-native",
  "linux-native-sync-persistent",
  "crypto-rust",
] }
crossterm = "0.29"
indicatif = "0.18"
notify = { version = "8", features = ["macos_fsevent"] }
sha2 = "0.11"
cranelift-jit = "0.130.0"
cranelift-codegen = { version = "0.130.0", features = ["x86"] }
cranelift-frontend = "0.130.0"
cranelift-native = "0.130.0"
cranelift-module = "0.130.0"
cranelift-object = "0.130.0"
libffi = "5.1.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", rev = "7f5895f414f6972c835d5b7ce6cd709a65a6d192", default-features = false }

[profile.dev]
opt-level = 1 # faster builds in dev without being fully unoptimised
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"
