[package]
name = "fidan-ai-analysis-helper"
version = "1.0.4"
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "fidan-ai-analysis-helper"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
fidan-driver = { workspace = true }
fidan-secrets = { workspace = true }
