[package]
name = "fidan-ast"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fidan-source = { workspace = true }
fidan-lexer = { workspace = true }
typed-arena = { workspace = true }
smol_str = { workspace = true }
