[package]
name = "fidan-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "fidan"
path = "src/main.rs"

[dependencies]
fidan-driver = { workspace = true }
fidan-diagnostics = { workspace = true }
fidan-source = { workspace = true }
fidan-lexer = { workspace = true }
fidan-ast = { workspace = true }
fidan-parser = { workspace = true }
fidan-typeck = { workspace = true }
fidan-hir = { workspace = true }
fidan-mir = { workspace = true }
fidan-interp = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
rustyline = { workspace = true }
