[package]
name = "fidan-cli"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "fidan"
path = "src/main.rs"

[[bin]]
name = "fidan-llvm-helper"
path = "src/bin/fidan-llvm-helper.rs"

[dependencies]
fidan-driver = { workspace = true }
fidan-fmt = { workspace = true }
fidan-lsp = { workspace = true }
fidan-diagnostics = { workspace = true }
fidan-source = { workspace = true }
fidan-lexer = { workspace = true }
fidan-ast = { workspace = true }
fidan-parser = { workspace = true }
fidan-typeck = { workspace = true }
fidan-hir = { workspace = true }
fidan-mir = { workspace = true }
fidan-passes = { workspace = true }
fidan-interp = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
rustyline = { workspace = true }
mimalloc = { workspace = true }
notify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
urlencoding = { workspace = true }
keyring = { workspace = true }
crossterm = { workspace = true }
sha2 = { workspace = true }
