[package]
name = "fidan-codegen-llvm"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
llvm-toolchain-22 = ["dep:inkwell", "dep:llvm-sys", "inkwell/llvm22-1"]
llvm-toolchain-22-dynamic = [
  "dep:inkwell",
  "dep:llvm-sys",
  "inkwell/llvm22-1-force-dynamic",
  "llvm-sys/force-dynamic",
]

[dependencies]
anyhow = { workspace = true }
fidan-ast = { workspace = true }
fidan-lexer = { workspace = true }
fidan-source = { workspace = true }
fidan-mir = { workspace = true }
fidan-runtime = { workspace = true }
fidan-stdlib = { workspace = true }
inkwell = { workspace = true, optional = true }
llvm-sys = { version = "221.0.0", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
