[package]
name = "fidan-fmt"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fidan-source = { workspace = true }
fidan-lexer = { workspace = true }
fidan-ast = { workspace = true }
fidan-parser = { workspace = true }

[dev-dependencies]
fidan-parser = { workspace = true }
fidan-diagnostics = { workspace = true }
