[package]
name = "fidan-hir"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fidan-source = { workspace = true }
fidan-lexer = { workspace = true }
fidan-ast = { workspace = true }
fidan-typeck = { workspace = true }

[dev-dependencies]
fidan-parser = { workspace = true }
