[package]
name = "fidan-interp"
version.workspace = true
edition.workspace = true

[dependencies]
fidan-source = { workspace = true }
fidan-ast = { workspace = true }
fidan-diagnostics = { workspace = true }
fidan-lexer = { workspace = true }
fidan-mir = { workspace = true }
fidan-runtime = { workspace = true }
fidan-stdlib = { workspace = true }
fidan-codegen-cranelift = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
fidan-parser = { workspace = true }
fidan-typeck = { workspace = true }
fidan-hir = { workspace = true }
fidan-passes = { workspace = true }
