[package]
name = "fidan-lexer"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fidan-source = { workspace = true }
fidan-diagnostics = { workspace = true }
phf = { workspace = true }
smol_str = { workspace = true }
dashmap = { workspace = true }
rustc-hash = { workspace = true }
