[package]
name = "fidan-llvm-helper"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
llvm-toolchain-22 = ["fidan-codegen-llvm/llvm-toolchain-22"]

[[bin]]
name = "fidan-llvm-helper"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
fidan-driver = { workspace = true }
fidan-codegen-llvm = { workspace = true }
