[package]
name = "fidan-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
fidan-source = { workspace = true }
fidan-lexer = { workspace = true }
fidan-parser = { workspace = true }
fidan-diagnostics = { workspace = true }
fidan-fmt = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }
