[package]
name = "fidan-lsp"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fidan-source = { workspace = true }
fidan-ast = { workspace = true }
fidan-lexer = { workspace = true }
fidan-parser = { workspace = true }
fidan-diagnostics = { workspace = true }
fidan-typeck = { workspace = true }
fidan-fmt = { workspace = true }
anyhow = { workspace = true }
dashmap = { workspace = true }
rustc-hash = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
