[package]
name = "fidan-mir"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fidan-config = { workspace = true }
fidan-source = { workspace = true }
fidan-lexer = { workspace = true }
fidan-ast = { workspace = true }
fidan-stdlib = { workspace = true }
fidan-hir = { workspace = true }
fidan-typeck = { workspace = true }
rustc-hash = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
fidan-parser = { workspace = true }
