[package]
name = "fidan-passes"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fidan-source = { workspace = true }
fidan-ast = { workspace = true }
fidan-mir = { workspace = true }
fidan-lexer = { workspace = true }
rustc-hash = { workspace = true }
