[package]
name = "fidan-runtime"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
# rlib   — Rust consumers (fidan interpreter, tests)
# staticlib — default AOT link mode: libfidan_runtime.a baked into the output binary
# cdylib   — dynamic AOT link mode: libfidan_runtime.so / .dll loaded at runtime
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
fidan-config = { workspace = true }
fidan-source = { workspace = true }
fidan-lexer = { workspace = true }
rustc-hash = { workspace = true }
regex = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
