[package]
name = "fidan-typeck"
version.workspace = true
edition.workspace = true

[dependencies]
fidan-source = { workspace = true }
fidan-lexer = { workspace = true }
fidan-ast = { workspace = true }
fidan-diagnostics = { workspace = true }
rustc-hash = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
fidan-parser = { workspace = true }
