[package]
name = "fidan-typeck"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fidan-config = { workspace = true }
fidan-source = { workspace = true }
fidan-lexer = { workspace = true }
fidan-ast = { workspace = true }
fidan-diagnostics = { workspace = true }
fidan-stdlib = { workspace = true }
rustc-hash = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
fidan-parser = { workspace = true }
